--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "Roald Ong",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^13.1.7"
+    "electron": "^12.0.1",
+    "electron-rebuild": "^2.3.5"
+  },
+  "dependencies": {
+    "electron-require": "^0.3.0",
+    "jimp": "^0.16.1",
+    "rclnodejs": "^0.19.1"
   }
 }
