--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^12.0.1",
+    "electron-packager": "^15.3.0",
     "electron-rebuild": "^2.3.5"
   },
   "dependencies": {
